--- a/views/organization/create.pug
+++ b/views/organization/create.pug
@@ -12,4 +12,4 @@ html(lang="en")
             label(for="location") Location
             input#location(type="text", name="location")
 
-            input(type="submit") Submit
+            input(type="submit", value="Submit")
