--- a/views/organization/index.pug
+++ b/views/organization/index.pug
@@ -9,3 +9,8 @@ html(lang="en")
             each organization in organizations
                 li 
                     a(href="/organization/"+organization._id) #{organization.name} - #{organization.location.name}
+                    ul
+                        each suborg in organization.suborgs
+                            li
+                                a(href="/organization/"+suborg._id) #{suborg.name} - #{suborg.location.name}
+
