--- a/views/404.pug
+++ b/views/404.pug
@@ -5,4 +5,8 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title 404
     body
-        h1 404
+        h1 AirChat
+        h2 404
+        p Resource you're looking for does not exist.
+        p
+            a(href="/api") API Documentation
