added routes to homepage

--- a/views/app/index.pug
+++ b/views/app/index.pug
@@ -6,7 +6,11 @@ html(lang="en")
         title AirChat
     body
         h1 AirChat
-        p You should not be here.
-        p Please use the API to access. 
+        p Available routes:
+        ul
+            li
+                a(href="/organization") /organization - List of all Organizations
+            li
+                a(href="/organization/create") /organization/create - Create new Organization 
         p
             a(href="/api") API Documentation
