fix route after refactor

--- a/views/app/organization/create.pug
+++ b/views/app/organization/create.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Create Organization
     body
-        form(action="/organization/create", method="post")
+        form(action="/api/organization/create", method="post")
             label(for="name") Name
             input#name(type="text", name="name")
 
