--- a/views/app/organization/create.pug
+++ b/views/app/organization/create.pug
@@ -27,7 +27,7 @@ block content
                                 input#location.white-border.validate(type='text', name='location')
                                 label(for="location") Location
 
-                            p
+                            p.col.s12
                                 label
                                     input(type="checkbox", name='root')
                                     span Root Organization?
