--- a/views/app/components/layout.pug
+++ b/views/app/components/layout.pug
@@ -8,7 +8,7 @@ html(lang="en")
         include styles.pug
         block styles
 
-    body.bg-page
+    body
         header
             include navbar.pug
         
