--- a/views/api/index.pug
+++ b/views/api/index.pug
@@ -8,3 +8,7 @@ html(lang="en")
         h1 AirChat
         h2 Documentation
         p To be updated soon.
+
+        ul
+            li
+                a(href="/api/organizations/delete/all", style="color:red") Delete All Organizations
