added root check

--- a/views/app/organization/index.pug
+++ b/views/app/organization/index.pug
@@ -1,16 +1,22 @@
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Organizations
-    body
-        ul
-            each organization in organizations
-                li 
-                    a(href="/api/organization/"+organization._id) #{organization.name} - #{organization.location.name}
-                    ul
-                        each suborg in organization.suborgs
-                            li
-                                a(href="/api/organization/"+suborg._id) #{suborg.name} - #{suborg.location.name}
+extend ../components/layout.pug
 
+block styles
+    link(href='https://fonts.googleapis.com/css?family=Lato', rel='stylesheet')
+    link(rel="stylesheet", href="/css/organization.css")
+
+block title
+    title Organizations | AirChat
+
+block content
+
+    ul.collapsible
+        each organization in organizations
+            if organization.root
+                li
+                    .collapsible-header
+                        a(href="/api/organization/"+organization._id) #{organization.name} - #{organization.location.name}
+                    .collapsible-body
+                        ul
+                            each suborg in organization.suborgs
+                                li
+                                    a(href="/api/organization/"+suborg._id) #{suborg.name} - #{suborg.location.name}
