--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@ body {
     border: 1px solid #aaaaaa80;
     margin-right: 5px;
 }
+
 .margin-right-compact{
-    margin-left: 5px;
+    margin-right: 5px;
 }
