edit search and colour teal

--- a/views/app/components/navbar.pug
+++ b/views/app/components/navbar.pug
@@ -5,13 +5,22 @@ nav.white
 			i.material-icons menu
 		ul.right.hide-on-med-and-down
 			li
-				a(href="sass.html") Sass
+				a.teal-text(href="sass.html") Sass
 			li
-				a(href="badges.html") Components
+				a.teal-text(href="badges.html") Components
 			li
-				a(href="collapsible.html") Javascript
+				a.teal-text(href="collapsible.html") Javascript
 			li
-				a(href="mobile.html") Mobile
+				a.teal-text(href="mobile.html") Mobile
+			li
+				form
+					.input-field
+						input#search(type="search" placeholder="Search")
+						label.label-icon(for="search")
+							i.material-icons.teal-text search
+						i.material-icons close
+
+
 ul#mobile-demo.sidenav
 	li
 		a(href="sass.html") Sass
