--- a/views/app/organization/manage.pug
+++ b/views/app/organization/manage.pug
@@ -11,7 +11,10 @@ block content
     section.section
         .row
             .col.s12
-                h5 Main > Blah > Some > more
+                a.breadcrumb.teal-text(href="#") Hello
+                a.breadcrumb.teal-text(href="#") Hello
+                a.breadcrumb.teal-text(href="#") Hello
+                a.breadcrumb.teal-text(href="#") Hello
                     //- i.material-icons.left chevron_left 
             
             .col.s3
