--- a/src/scss/organization.scss
+++ b/src/scss/organization.scss
@@ -10,3 +10,18 @@ input[type="text"]:not(.browser-default).white-border {
     border-bottom: 1px solid white;
 }
 
+.breadcrumb.teal-text {
+    
+    color: rgba(0, 150, 136, 0.7);
+  }
+  
+
+  
+  .breadcrumb.teal-text:before {
+    color: rgba(0, 150, 136, 0.7);
+  }
+  
+
+  .breadcrumb.teal-text:last-child {
+    color: #009688;
+  }
