--- a/views/api/index.pug
+++ b/views/api/index.pug
@@ -15,17 +15,17 @@ html(lang="en")
             li
                 a(href="/api/organization/create") "/api/organization/create" - POST - Organization create
 
-            
-            li
-                a(href="/api/organization/:id") "/api/organization/:id" - GET - Organization details
-
-            
-            li
-                a(href="/api/organization/:id/delete", style="color:red") "/api/organization/:id/delete" - POST - Organization
-
-            
             li
                 a(href="/api/organizations") "/api/organizations" - GET - Organization list
 
             li
-                a(href="/api/organizations/delete/all", style="color:red") "/api/organizations/delete/all" - GET - Delete All Organizations
+                a(href="/api/organization/:id") "/api/organization/:id" - GET - Details of organization 'id'
+
+            li
+                a(href="/api/organizations/:id/members") "/api/organizations/:id/members" - GET - Organization members list for organization 'id'
+            
+            li
+                a(href="/api/organization/:id/delete", style="color:red") "/api/organization/:id/delete" - POST - Delete organization 'id'
+
+            li
+                a(href="/api/organizations/delete/all", style="color:red") "/api/organizations/delete/all" - GET - Delete All organizations
