--- a/src/scss/chat.scss
+++ b/src/scss/chat.scss
@@ -82,5 +82,56 @@
         margin-top: 2px;
         margin-right: 4px;
     }
-    
+}
+
+.messages {
+    flex: 1 0 auto;
+    padding-left: 8px;
+    padding-right: 8px;
+    ul {
+        li.message {
+            margin-bottom: 18px;
+            span {
+                padding: 8px;
+                padding-left: 16px;
+                padding-right: 16px;
+                border-radius: 24px;
+            }
+        }
+        li.message.from {
+            span {
+                border-bottom-right-radius: 4px;
+                border-top-right-radius: 12px;
+            }
+        }
+        li.message.to {
+            span {
+                border-bottom-left-radius: 4px;
+                border-top-left-radius: 12px;
+            }
+        }
+    }
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+input[type="text"]:not(.browser-default).no-border {
+    border: none;
+    margin: 0;
+}
+
+input[type="text"]:not(.browser-default):focus:not([readonly]).no-border {
+    border: none;
+    box-shadow: none;
+}
+
+.message-input {
+    display: flex;
+    flex-direction: row;
+    .input-field {
+        flex: 1 0 auto;
+    }
 }
