created user profile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,3 +28,12 @@ body {
 .margined-tiny {
     margin: 8px;
 }
+
+img.top-margin-reduce {
+    margin-top:-25%; 
+    width: 100px  
+}
+
+.rounded-no-hide {
+    border-radius: 8px;
+}
