--- a/views/app/user/profile.pug
+++ b/views/app/user/profile.pug
@@ -14,7 +14,7 @@ block content
                     i.material-icons.left arrow_back
 
     section.container.grey.lighten-4.padded-top-cozy
-        .row                                                                                                 
+        .row                                                                                                    
             .col.s12.l4.push-l4
                 .card-panel.center.rounded-no-hide
                     i.material-icons.left chat
@@ -26,7 +26,7 @@ block content
                     h5.center.grey-text Username
                     h5.center.grey-text Number
         .row
-            h5.left Media            
+            h5.left.grey-text.light Media            
 
 
                    
