--- a/views/app/components/navbar.pug
+++ b/views/app/components/navbar.pug
@@ -5,22 +5,22 @@ nav.white
 			i.material-icons menu
 		ul.right.hide-on-med-and-down
 			li
-				a.teal-text(href="sass.html") Sass
+				a.teal-text(href="home.html") Home
 			li
-				a.teal-text(href="badges.html") Components
+				a.teal-text(href="badges.html") Chats
 			li
-				a.teal-text(href="collapsible.html") Javascript
+				a.teal-text(href="collapsible.html") Directory
 			li
-				a.teal-text(href="mobile.html") Mobile
+				a.teal-text(href="mobile.html") Settings
 			
 
 
 ul#mobile-demo.sidenav
 	li
-		a(href="sass.html") Sass
+		a(href="home.html") Home
 	li
-		a(href="badges.html") Components
+		a(href="badges.html") Chats
 	li
-		a(href="collapsible.html") Javascript
+		a(href="collapsible.html") Directory
 	li
-		a(href="mobile.html") Mobile
+		a(href="mobile.html") Settings
