--- a/views/app/index.pug
+++ b/views/app/index.pug
@@ -14,11 +14,33 @@ html(lang="en")
                         a(href="/organization") /organization - List
                     li
                         a(href="/organization/create") /organization/create - Create
+                    li
+                        a(href="/organization/manage") Org manage
+                    li
+                        a(href="/organization/profile") Org Profile
+           
+           
             li User
                 ul
                     li
                         a(href="/user") /user - List
                     li
                         a(href="/user/create") /user/create - Create
+                    li
+                        a(href="/user/profile") Profile
+                    li
+                        a(href="/login") Login 
+                    li
+                        a(href="/signup") signup 
+           
+           
+            li Conversation
+                ul
+                    li
+                        a(href="/user/chats") List
+                    li
+                        a(href="/user/chat") Chat
+
+                        
         p
             a(href="/api") API Documentation
